--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 </body>
 
 <!-- Add faceapi library -->
-<script defer src="faceapi.min.js"></script>
+<script defer src="face-api.min.js"></script>
 <script defer src="app.js"></script>
 
 </html>
