Added functionality to laod models and prepare for recognition, added file upload element

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+    <input type="file" id="image-upload">
     <div class="social">
         <a href="https://github.com/orangegrove1955/faceapi-recognition-web">
             <i class="fas fa-code"></i>
