--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
 <body>
     <input type="file" id="image-upload">
+    <div id="image"></div>
     <div class="social">
         <a href="https://github.com/orangegrove1955/faceapi-recognition-web">
             <i class="fas fa-code"></i>
