Added loading feedback

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <body>
     <input type="file" id="image-upload">
     <div id="image"></div>
+    <div id="loading">Loading</div>
     <div class="social">
         <a href="https://github.com/orangegrove1955/faceapi-recognition-web">
             <i class="fas fa-code"></i>
