Added link to download test images

--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
 </head>
 
 <body>
+    <div>
+        <h1>To use this site, you'll first need to <a
+                href="https://github.com/orangegrove1955/faceapi-facial-recognition/raw/master/test_images.zip">download
+                the test images</a></h1>
+    </div>
     <input type="file" id="image-upload">
     <div id="image"></div>
     <div id="loading">Loading</div>
